--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Module",
+            "type": "python",
+            "request": "launch",
+            "module": "lib.ffmpeg",
+            "cwd": "${workspaceFolder}"
+        },
+        {
             "name": "Python: Flask",
             "type": "python",
             "request": "launch",
